<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingTop="12dp">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/session_id_edit_text_hint">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/session_code_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:ems="10"
            android:inputType="textPersonName" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/dialog_cancel_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/dialog_cancel_button_text" />

        <Button
            android:id="@+id/dialog_join_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAllCaps="false"
            android:text="@string/dialog_join_button_text" />

    </LinearLayout>

</LinearLayout>