<resources>
    <string name="app_name">quickPick</string>
    <string name="view_edit_lists_text">view + edit my lists</string>
    <string name="create_new_list_text">create a list</string>
    <string name="join_session_text">join a session"</string>
    <string name="create_session_text">create a session</string>
    <string name="enter_session_id_title">please enter session code:</string>
    <string name="facebook_app_id">822865601801621</string>
    <string name="fb_login_protocol_scheme">fb822865601801621</string>
    <string name="session_id_edit_text_hint">Session ID</string>
    <string name="dialog_join_button_text">Join</string>
    <string name="dialog_cancel_button_text">Cancel</string>
    <string name="dialog_select_button_text">Select</string>
...
    <string name="pick_text">Pick</string>
    <string name="selected_list_text">Selected list</string>
    <string name="select_list_failed">List update failed, try again</string>
    <string name="get_list_failed">Failed to get list for swiping</string>
    <string name="get_lists_failed">Failed to get lists</string>
    <string name="delete_list_failed">Failed to delete list</string>
    <string name="invalid_code">Invalid code</string>
    <string name="create_or_update_list_name_prompt">List Name:</string>
    <string name="create_or_update_list_description_name_prompt">List Description:</string>
    <string name="create_or_update_list_add_entries_button_text">Add Entries</string>
    <string name="create_or_update_list_create_button_text">Create List</string>
    <string name="create_or_update_list_update_button_text">Update List</string>
    <string name="create_or_update_list_entries_text">list entries:</string>
...
