...
                        android:text="@string/create_session_text"
                        android:textSize="16sp" />
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/join_session_button"
                android:layout_width="170dp"
                android:layout_height="170dp"
                android:layout_margin="10dp"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="12dp"
                app:cardElevation="0dp"
...
